enhancement: images on download no longer distorting

--- a/src/components/download/download.module.css
+++ b/src/components/download/download.module.css
@@ -30,7 +30,7 @@
 }
 
 .imgContainer {
-  height: 270px;
+  height: 380px;
   background: #3650a2;
   border-radius: 6px;
   overflow: hidden;
@@ -41,8 +41,10 @@
 
 .imgContainer .desktopImg,
 .imgContainer .phoneImg {
-  width: 90%;
-  height: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  max-height: 100%;
   margin-top: 55px;
   z-index: 2;
 }
@@ -213,18 +215,5 @@
   }
   .imgContainer {
     height: 160px;
-  }
-  .imgContainer .desktopImg {
-    width: 105%;
-    height: 105%;
-    margin-top: 30px;
-    z-index: 2;
-  }
-  .imgContainer .phoneImg {
-    width: 105%;
-    height: 105%;
-    margin-top: 30px;
-    z-index: 2;
-    margin-left: 30px;
   }
 }
